# BFGS-GPU

./: .gitignore  CMakeLists.txt  array2.h  bfgs-cpu.cpp  bfgs-gpu.cu  bfgs_cpu.cpp  notes.txt  util.h
data/: bfgs-large-eqs.txt  bfgs-large.txt  bfgs-mid-eqs.txt  bfgs-mid.txt
gpu/: CMakeLists.txt  kernel.cu  kernel.h  main.cu  util.cu  util.h  vec_mat_op.cu  vec_mat_op.h
